--- a/configDev.env
+++ b/configDev.env
@@ -1,3 +1,3 @@
-POSTGRES_URL=postgresql://postgres:article@localhost:5432/article_service
+POSTGRES_URL=postgresql://postgres:article@localhost:5432/article
 ARTICLESERVICE_HOST=localhost
-ARTICLESERVICE_PORT=:8080
+ARTICLESERVICE_PORT=:3000
