--- a/configDev.env
+++ b/configDev.env
@@ -1,3 +1,5 @@
 POSTGRES_URL=postgresql://postgres:article@localhost:5432/article
 ARTICLESERVICE_HOST=localhost
 ARTICLESERVICE_PORT=:3000
+
+GRPC_PORT=:5000
