--- a/configDev.env
+++ b/configDev.env
@@ -1,4 +1,4 @@
-POSTGRES_URL=postgresql://postgres:article@localhost:5432/article
+POSTGRES_URL=postgresql://postgres:article@localhost:5432/article_service
 ARTICLESERVICE_HOST=localhost
 ARTICLESERVICE_PORT=:3000
 
