Add CI config.yml & Dockerfile

--- a/configDev.env
+++ b/configDev.env
@@ -1,5 +1,5 @@
 POSTGRES_URL=postgresql://postgres:article@localhost:5432/article_service
-ARTICLESERVICE_HOST=localhost
-ARTICLESERVICE_PORT=:3000
+ARTICLE_SERVICE_HOST=0.0.0.0
+ARTICLE_SERVICE_PORT=:3000
 
 GRPC_PORT=:5000
